changing the title

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Quiz</title>
+    <title>Morocco Quiz</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1 class="text-center">PROJET DEV WEB</h1>
+            <h1 class="text-center">MOROCCO QUIZ</h1>
         </div>
     </header>
     <div id="infos">
